...
    <string name="hangman_toast_remove_standard_word">Can not delete standard word</string>
    <string name="hangman_word_list_toggle_on">Hide word list</string>
    <string name="hangman_word_list_toggle_off">Show word list</string>
    <string name="hangman_hint_button_text">Hint</string>


    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="tiles_menu_fragment_label">Dont touch the white tiles</string>
    <string name="hangman_lose">Congratulations. You lost!</string>
    <string name="imageViewDescription">This is the ImageView for the user feedback</string>
    <string name="white_tiles_timer">Timer</string>
    <string name="white_tiles_time">Time in seconds</string>
    <string name="white_tiles_time_hint">Set Timer</string>
...
