...
        android:layout_width="307dp"
        android:layout_height="70dp"
        android:text="@string/welcome_screen_headline"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/ticTacToeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/ticTacToeButton"
...
        android:id="@+id/hangmanButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/hangman"
        app:layout_constraintTop_toBottomOf="@id/ticTacToeButton"
        app:layout_constraintBottom_toTopOf="@id/whiteTilesButton"
        app:layout_constraintEnd_toStartOf="@id/hangmanText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/hang_man_image"/>

    <ImageButton
        android:id="@+id/whiteTilesButton"
...
